<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/tvLeyProteccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/politicaPrivacidad"
        android:textColor="@color/letras"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivCandado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_proteccion_de_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLeyProteccion"/>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView5"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@color/fondoBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCandado">

        <LinearLayout
            android:id="@+id/llPolitica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texto0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aceptaTerminos"
                android:textColor="@color/colorGris"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/texto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texto1Proteccion"
                android:textColor="@color/colorGris"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/titulo1Proteccion"
                android:textColor="@color/letras"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/texto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texto2Proteccion"
                android:textColor="@color/colorGris"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/titulo2Proteccion"
                android:textColor="@color/letras"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/texto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texto3Proteccion"
                android:textColor="@color/colorGris"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/titulo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/titulo3Proteccion"
                android:textColor="@color/letras"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/texto4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texto4Proteccion"
                android:textColor="@color/colorGris"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/titulo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/titulo4Proteccion"
                android:textColor="@color/letras"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/texto5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/texto5Proteccion"
                android:textColor="@color/colorGris"
                android:textSize="15dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <CheckBox
        android:id="@+id/cbAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="45dp"
        android:background="@color/fondoPedidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <TextView
        android:id="@+id/txte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/aceptoTerminos"
        android:textColor="@color/letras"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/cbAceptar"
        app:layout_constraintTop_toBottomOf="@+id/scrollView5" />

    <!--<TextView
       android:id="@+id/tvAceptarTerminos"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="75dp"
       android:layout_marginLeft="75dp"
       android:layout_marginTop="25dp"
       android:layout_marginEnd="75dp"
       android:layout_marginRight="75dp"
       android:layout_marginBottom="10dp"
       android:gravity="center"
       android:text="@string/continuar"
       android:textSize="23dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/txte" />-->


    <ImageView
        android:id="@+id/ivAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:onClick="onclickAcceder"
        android:src="@drawable/ic_boton_acceder_bloqueado"
        android:tag="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txte" />

</androidx.constraintlayout.widget.ConstraintLayout>