<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo">

    <TextView
        android:id="@+id/tvRega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/rega"
        android:textColor="@color/letras"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPedido"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRega"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_edit_text"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="5dp"
        android:textColor="@color/letras"
        android:textColorHint="@color/letrasClaras"
        android:hint="@string/ingresaRega"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRega"/>

    <TextView
        android:id="@+id/tvCodigoGranja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/codigoGranjaBSM"
        android:textColor="@color/letras"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRega"/>

    <EditText
        android:id="@+id/etCodigoGranja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_edit_text"
        android:paddingLeft="8dp"
        android:paddingRight="5dp"
        android:textColor="@color/letras"
        android:textColorHint="@color/letrasClaras"
        android:hint="@string/ingresaCodigo"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCodigoGranja"/>

    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_comentario_info_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoGranja"/>

    <TextView
        android:id="@+id/tvTextoCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textoCodigo"
        android:textColor="@color/letras"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivInfo"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoGranja"/>

    <ImageView
        android:id="@+id/ivValidar"
        android:onClick="onclickValidar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:src="@drawable/ic_validar_bloqueado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoCodigo"/>


</androidx.constraintlayout.widget.ConstraintLayout>